<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity"
    android:layout_marginTop="@dimen/marginSize64"
    android:layout_marginLeft="@dimen/marginSize32"
    android:layout_marginRight="@dimen/marginSize32">

    <TextView
        android:id="@+id/resultTVTotalQuestions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total"
        android:textColor="#000"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/resultTVTotalQuestionsNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:layout_marginLeft="@dimen/marginSize48"
        app:layout_constraintLeft_toRightOf="@+id/resultTVTotalQuestions"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/resultTVCorrect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:text="@string/correct"
        android:textColor="#000"
        app:layout_constraintTop_toBottomOf="@+id/resultTVTotalQuestions"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/resultTVCorrectNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:layout_marginTop="55dp"
        app:layout_constraintLeft_toLeftOf="@id/resultTVTotalQuestionsNum"
        app:layout_constraintTop_toBottomOf="@id/resultTVTotalQuestionsNum"/>
    <TextView
        android:id="@+id/resultTVWrong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:text="@string/wrong"
        android:textColor="#000"
        app:layout_constraintTop_toBottomOf="@+id/resultTVCorrect"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/resultTVWrongNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:textColor="#000"
        app:layout_constraintLeft_toLeftOf="@id/resultTVTotalQuestionsNum"
        app:layout_constraintTop_toBottomOf="@id/resultTVCorrectNum" />

    <Button
        android:id="@+id/btnResultBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/fui_bgAnonymous"></Button>

</androidx.constraintlayout.widget.ConstraintLayout>